<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="#E6E6E6"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:cardPreventCornerOverlap="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        //ALTERNATIF NAME LAYOUT
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_primary">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:gravity="center_vertical"
                android:layout_marginStart="@dimen/alternatif_title_padding"
                android:text="Kecamatan Getasan"
                android:textColor="@color/cardview_light_background">

            </TextView>
        </LinearLayout>

        //PARENT DATA LAYOUT

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/alternatif_padding"
            android:weightSum="1">

            //LEFT DATA LAYOUT

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/positif">

                    </TextView>

                    <TextView
                        android:id="@+id/item_positif"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="23">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/kepadatan">

                    </TextView>

                    <TextView
                        android:id="@+id/item_kepadatan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="750">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/longitude">

                    </TextView>

                    <TextView
                        android:id="@+id/item_longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-7.86849">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/latitude">

                    </TextView>

                    <TextView
                        android:id="@+id/item_latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-7.76892">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/ketinggian">

                    </TextView>

                    <TextView
                        android:id="@+id/item_ketinggian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1450">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/panjang_jalan">

                    </TextView>

                    <TextView
                        android:id="@+id/item_panjang_jalan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="175.6">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            //RIGHT DATA LAYOUT

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/suhu">

                    </TextView>

                    <TextView
                        android:id="@+id/item_suhu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="35">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/kecepatan_angin">

                    </TextView>

                    <TextView
                        android:id="@+id/item_kecepatan_angin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="11">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/kelembaban">

                    </TextView>

                    <TextView
                        android:id="@+id/item_kelembaban"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="98">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/presipitasi">

                    </TextView>

                    <TextView
                        android:id="@+id/item_presipitasi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="17">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/textview_margin"
                        android:text="@string/tekanan_udara">

                    </TextView>

                    <TextView
                        android:id="@+id/item_tekanan_udara"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30,3">

                    </TextView>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        //BUTTON LAYOUT

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/button_margin"
                android:layout_weight="0.5"
                android:text="@string/button_edit">

            </Button>

            <Button
                android:id="@+id/btn_hapus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin"
                android:layout_weight="0.5"
                android:text="@string/button_hapus">

            </Button>
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>